# github-required-workflows

./: .pre-commit-config.yaml  .yamllint  Makefile  README.md  pyproject.toml  test-gitleaks.txt
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: canary-bad-uses.yml  canary-cancel.yml  canary-findings.yml  canary-timeout.yml  canary-unguarded.yml  canary-yaml-error.yml  ci.yaml  lint.yaml  sast.yaml  security-pre-check.yaml  security.yaml
common/graphql/: possibleTypes.json  test.snap
docs/design/: 2026-07-03-fleet-sast-canary-results.md  2026-07-03-fleet-sast.md
workflows/: security.yaml
