[tool.poetry]
name = "github-required-workflows"
version = "0.0.0"
description = ""
authors = []
package-mode = false

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.dependencies]
python = "~3.11"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.0"

[tool.poetry-dynamic-versioning]
enable = true
style = 'pep440'

[build-system]
requires = ["poetry-core>=1.5.2", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.black]
line-length = 140
skip-string-normalization = true
target-version = ['py311']
